# helix-agent

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: config.py  db.py  logger.py  main.py  worker.py
backend/app/middleware/: auth.py
backend/app/models/: schemas.py
backend/app/routes/: metrics.py  quiz.py
backend/app/services/: agent.py  browser.py  history.py  sandbox.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_config.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/components/: ErrorBoundary.tsx  IterationTimeline.tsx  LogStream.tsx  RunsTable.tsx  StatsCards.tsx  StatusBadge.tsx  SubmitForm.tsx
observability/: loki-config.yml  prometheus.yml
observability/grafana/: datasources.yml
