[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-backend"
version = "1.0.0"
description = "Production-grade LLM quiz solving system with browser automation and secure sandboxing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Team", email = "your-email@example.com"}
]
requires-python = ">=3.12"

[project.urls]
Repository = "https://github.com/yourusername/helix-agent"
License = "https://github.com/yourusername/helix-agent/blob/main/LICENSE"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["backend/app"]
omit = [
    "*/tests/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@abstractmethod",
]

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["app"]
known_third_party = ["fastapi", "pydantic", "anthropic"]

[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",  # Bad whitespace
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "W0212",  # Access to protected member
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-locals = 15
max-arguments = 7
max-attributes = 7
